--- a/src/index.css
+++ b/src/index.css
@@ -1,69 +1,106 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
+@import url("https://fonts.googleapis.com/css2?family=Abel&family=Bruno+Ace+SC&family=Flow+Rounded&family=Gruppo&family=Lexend+Peta:wght@100;200;300;400;500;600&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;1,200;1,300;1,400;1,500&family=Open+Sans:ital,wght@0,300;0,400;0,500;1,300;1,400&family=Poppins:wght@100;200;300;400;500&family=Quicksand:wght@300;400;500;600&family=Rajdhani:wght@300;400;500;600&family=Splash&family=Ysabeau+SC:wght@100;200;300;400;500;600;700&display=swap");
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
+*,
+html,
 body {
   margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
+  text-decoration: none;
+  list-style-type: none;
+}
+
+.form-area {
+  width: 100%;
+  height: 100vh;
   display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  justify-content: center;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+.form {
+  width: 30%;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
+h4 {
+  text-align: center;
+}
+
+.input-area {
+  border-radius: 30px;
+  border: 2px solid black;
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+  padding: 20px;
+  width: 100%;
+  height: auto;
+}
+form {
+  border-radius: 30px;
+  border: 2px solid black;
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+  padding: 20px;
+  width: 100%;
+  height: auto;
+}
+
+.table-area {
+  padding: 20px;
+  width: 100%;
+  height: auto;
+  display: flex;
+  justify-content: center;
+}
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
+thead tr th {
+  padding: 2px 5px;
   font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+  background-color: rgb(192, 188, 188);
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+.no {
+  font-weight: 500;
 }
+
+td {
+  text-transform: capitalize;
+  padding: 2px 8px;
+  font-size: 15px;
+  text-align: center;
+}
+
+label {
+  display: flex;
+  /* justify-content: space-between; */
+  gap: 5px;
+}
+
+label p {
+  font-weight: 500;
+}
+
+input {
+  width: 100%;
+  padding: 0 3px;
+}
+
+.fitur {
+  display: flex;
+  gap: 5px;
+}
+
+.fitur button {
+  padding: 0px 5px;
+}
+
+/* tr{
+  display: flex;
+} */
